--- a/index.html
+++ b/index.html
@@ -339,26 +339,42 @@
                       <tbody class="divide-y divide-gray-100">
                   <tr class="hover:bg-gray-200">
                     <td class="p-3 text-sm text-gray-700 whitespace-nowrap font-bold">Spaghetti and Beef Stew</td>
-                    <td><input type="checkbox" class="mr-5 ml-3"></td>
+                    <td><span>$15</span></td>
+
+                   <td><select name="" id="" class="border-none"><option value="">0</option>
+                      <option value="">1</option>
+                      <option value="">2</option></select></td>
+
                     </tr>
                     <tr class="hover:bg-gray-200">
                   <td class="p-3 text-sm text-gray-700 whitespace-nowrap font-bold">Rice and stew</td>
-                  <td><input type="checkbox" class="mr-5 ml-3"></td>
+                    <td><span>$30</span></td>
+                  <td><select name="" id="" class="border-none"><option value="">0</option>
+                    <option value="">1</option>
+                    <option value="">2</option></select></td>
 
                   </tr>
                   <tr class="hover:bg-gray-200">
                   <td class="p-3 text-sm text-gray-700 whitespace-nowrap font-bold">Basmati Rice and Turkey</td>
-                  <td><input type="checkbox" class="mr-5 ml-3"></td>
+                  <td><span>$30</span></td>
+                  <td><select name="" id="" class="border-none"><option value="">0</option>
+                    <option value="">1</option>
+                    <option value="">2</option></td>
 
                   </tr>
                   <tr class="hover:bg-gray-200">
                     <td class="p-3 text-sm text-gray-700 whitespace-nowrap font-bold">Sharwarma</td>
-                    <td><input type="checkbox" class="mr-5 ml-3"></td>
-
+                    <td><span>$25</span></td>
+                    <td><select name="" id="" class="border-none"><option value="">0</option>
+                      <option value="">1</option>
+                      <option value="">2</option></td>
                     </tr>
                     <tr class="hover:bg-gray-200">
                       <td class="p-3 text-sm text-gray-700 whitespace-nowrap font-bold">Fish BBQ</td>
-                    <td><input type="checkbox" class="mr-5 ml-3"></td>
+                    <td><span>$22</span></td>
+                      <td><select name="" id="" class="border-none"><option value="">0</option>
+                        <option value="">1</option>
+                        <option value="">2</option></td>
 
                       </tr>
 
