--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
               <p
                 class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700 text-justify"
               >
-         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit alias ex iste distinctio at voluptatibus mollitia, accusamus cumque commodi enim, vel, odit facere ullam hic beatae! Vero facilis impedit, harum aliquam, eum, iusto accusamus quos officia excepturi ut hic. Explicabo excepturi perspiciatis iste laboriosam ipsum deleniti, amet dolorem eum fuga.
+              For your food, small chops, desserts, We've got you covered anyday, anywhere and anytime.
+              For your Parties, marriages and other celebrations, we are just one call away.
               </p>
               <!-- <a
                 href="https://www.creative-tim.com/learning-lab/tailwind-starter-kit#/presentation"
